feat: Remove AI Analysis sidebar for mobile-first design

--- a/council_finance/templates/council_finance/council_detail.html
+++ b/council_finance/templates/council_finance/council_detail.html
@@ -136,7 +136,7 @@
             </span>
           </a>
           
-          <a href="{% url 'council_edit_react' council.slug %}" 
+          <a href="{% url 'council_edit' council.slug %}" 
              class="gov-uk-tab"
              role="tab"
              aria-selected="false">
